mkl/src/imports/cblas/CBLAS.cs

        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgemmt(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasTrans TransB,
                        int N, int K,
                        double alpha, ref double A, int lda,
                        ref double B, int ldb, double beta,
                        ref double C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsymm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        double alpha, ref double A, int lda,
                        ref double B, int ldb, double beta,
                        ref double C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsyrk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        double alpha, ref double A, int lda,
                        double beta, ref double C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsyr2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        double alpha, ref double A, int lda,
                        ref double B, int ldb, double beta,
                        ref double C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtrmm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        double alpha, ref double A, int lda,
                        ref double B, int ldb);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtrsm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        double alpha, ref double A, int lda,
                        ref double B, int ldb);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtrsm_batch(BlasLayout Layout, ref BlasSide Side_Array,
                            ref BlasUpLo Uplo_Array, ref BlasTrans Transa_Array,
                            ref BlasDiagonal Diag_Array, ref int M_Array,
                            ref int N_Array, ref double alpha_Array,
                            ref double A_Array, ref int lda_Array,
                            ref double B_Array, ref int ldb_Array,
                            int group_count, ref int group_size);

        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgemm3m(BlasLayout Layout, BlasTrans TransA,
                        BlasTrans TransB, int M, int N,
                        int K, ref byte alpha, ref byte A,
                        int lda, ref byte B, int ldb,
                        ref byte beta, ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgemm_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                            ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                            ref int K_Array, ref byte alpha_Array, ref byte A_Array,
                            ref int lda_Array, ref byte B_Array, ref int ldb_Array,
                            ref byte beta_Array, ref byte C_Array, ref int ldc_Array,
                            int group_count, ref int group_size);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgemm3m_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                                ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                                ref int K_Array, ref byte alpha_Array, ref byte A_Array,
                                ref int lda_Array, ref byte B_Array, ref int ldb_Array,
                                ref byte beta_Array, ref byte C_Array, ref int ldc_Array,
                                int group_count, ref int group_size);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgemmt(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasTrans TransB,
                        int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csymm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csyrk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte beta, ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csyr2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctrmm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctrsm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctrsm_batch(BlasLayout Layout, ref BlasSide Side_Array,
                            ref BlasUpLo Uplo_Array, ref BlasTrans Transa_Array,
                            ref BlasDiagonal Diag_Array, ref int M_Array,
                            ref int N_Array, ref byte alpha_Array,
                            ref byte A_Array, ref int lda_Array,
                            ref byte B_Array, ref int ldb_Array,
                            int group_count, ref int group_size);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgemm(BlasLayout Layout, BlasTrans TransA,
                        BlasTrans TransB, int M, int N,
                        int K, ref byte alpha, ref byte A,
                        int lda, ref byte B, int ldb,
                        ref byte beta, ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgemm3m(BlasLayout Layout, BlasTrans TransA,
                        BlasTrans TransB, int M, int N,
                        int K, ref byte alpha, ref byte A,
                        int lda, ref byte B, int ldb,
                        ref byte beta, ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgemm_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                            ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                            ref int K_Array, ref byte alpha_Array, ref byte A_Array,
                            ref int lda_Array, ref byte B_Array, ref int ldb_Array,
                            ref byte beta_Array, ref byte C_Array, ref int ldc_Array,
                            int group_count, ref int group_size);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgemm3m_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                                ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                                ref int K_Array, ref byte alpha_Array, ref byte A_Array,
                                ref int lda_Array, ref byte B_Array, ref int ldb_Array,
                                ref byte beta_Array, ref byte C_Array, ref int ldc_Array,
                                int group_count, ref int group_size);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgemmt(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasTrans TransB,
                        int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
